@@ -289,6 +289,12 @@ CHANGES
    - "out" parameters require a type that is supported by
      cx_oracle.  An error will be raised if no cx_oracle
      type can be found.
+   - Oracle 'DATE' now does not perform any result processing,
+     as the DATE type in Oracle stores full date+time objects,
+     that's what you'll get.  Note that the generic types.Date
+     type *will* still call value.date() on incoming values, 
+     however.  When reflecting a table, the reflected type
+     will be 'DATE'.
      
 - sqlite
    - Added "native_datetime=True" flag to create_engine().
